--- a/prototype_simulator/.vscode/settings.json
+++ b/prototype_simulator/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.python"
+        "editor.defaultFormatter": "ms-python.python",
+        "editor.formatOnSave": true
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "editor.formatOnSave": true
 }
